--- a/.drone.yml
+++ b/.drone.yml
@@ -4,14 +4,14 @@ workspace:
 
 services:
   web:
-    image: fpfis/httpd-php-ci:7.1
+    image: fpfis/httpd-php-ci:${PHP_VERSION=7.2}
     environment:
       - DOCUMENT_ROOT=/test/webtools-geocoding-provider
 
 pipeline:
   composer-install:
     group: prepare
-    image: fpfis/httpd-php-ci:7.1
+    image: fpfis/httpd-php-ci:${PHP_VERSION=7.2}
     volumes:
       - /cache:/cache
     commands:
@@ -21,12 +21,17 @@ pipeline:
 # large number of false positives. Re-enable this once the tool works properly.
 #  grumphp:
 #    group: test
-#    image: fpfis/httpd-php-ci:7.1
+#    image: fpfis/httpd-php-ci:${PHP_VERSION=7.2}
 #    commands:
 #      - ./vendor/bin/grumphp run
 
   phpunit:
     group: test
-    image: fpfis/httpd-php-ci:7.1
+    image: fpfis/httpd-php-ci:${PHP_VERSION=7.2}
     commands:
       - ./vendor/bin/phpunit
+
+matrix:
+  PHP_VERSION:
+    - 7.1
+    - 7.2
