--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,15 @@
     "homepage": "https://github.com/openeuropa/webtools-geocoding-provider",
     "license": "EUPL",
     "require": {
-        "php": "^7.1",
-        "geocoder-php/common-http": "^4.0",
+        "php": "~7.2.0 || ~7.3.0",
+        "geocoder-php/common-http": "^4.2",
         "willdurand/geocoder": "^4.0"
     },
     "require-dev": {
-        "geocoder-php/provider-integration-tests": "^1.0",
+        "geocoder-php/provider-integration-tests": "^1.3",
         "openeuropa/code-review": "dev-master",
         "php-http/curl-client": "^1.7",
-        "phpunit/phpunit": "~6.3"
+        "phpunit/phpunit": "~7|~8"
     },
     "provide": {
         "geocoder-php/provider-implementation": "1.0"
