--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/openeuropa/webtools-geocoding-provider",
     "license": "EUPL",
     "require": {
-        "php": "^7.1",
+        "php": ">=7.2",
         "geocoder-php/common-http": "^4.0",
         "willdurand/geocoder": "^4.0"
     },
