--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -1,2 +1,13 @@
 imports:
   - { resource: vendor/openeuropa/code-review/dist/library-conventions.yml }
+
+parameters:
+    tasks:
+        phpcs:
+            standard: '%tasks.phpcs.standard%'
+            ignore_patterns: '%tasks.phpcs.ignore_patterns%'
+            triggered_by: '%tasks.phpcs.triggered_by%'
+            whitelist_patterns: '%tasks.phpcs.whitelist_patterns%'
+            warning_severity: '%tasks.phpcs.warning_severity%'
+            metadata:
+                priority: 3000
