--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "willdurand/geocoder": "^4.0"
     },
     "require-dev": {
-        "geocoder-php/provider-integration-tests": "^1.3",
+        "geocoder-php/provider-integration-tests": "~1.4.0",
         "openeuropa/code-review": "dev-master",
         "php-http/curl-client": "^1.7",
         "phpunit/phpunit": "^7.5.15|~8|~9"
