--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,9 @@ services:
     volumes:
       - .:/var/www/html
     environment:
-      XDEBUG_CONFIG: "client_host=10.254.254.254 client_port=9000"
-      XDEBUG_MODE: "debug"
-      XDEBUG_SESSION: "PHPSTORM"
-      XDEBUG_SESSION_START: "PHPSTORM"
-      XDEBUG_TRIGGER: "PHPSTORM"
+      XDEBUG_CONFIG: "client_host=172.17.0.1" # Non-Mac users.
+      # XDEBUG_CONFIG: "client_host=host.docker.internal" # Mac users.
+      XDEBUG_MODE: "develop, debug"
       PHP_IDE_CONFIG: "serverName=Docker"
-      # For Xdebug setup, run this command in the terminal:
-      # For Mac users: sudo ifconfig en0 alias 10.254.254.254 255.255.255.0
-      # For Linux users: sudo ip addr add 10.254.254.254/32 dev lo label lo:1
+      # Enable step debugging for all PHP request. See ./README.md#step-debugging for more information.
+      # XDEBUG_SESSION: 1
