--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - .:/var/www/html
     environment:
+      COMPOSERVER: "--2"
       XDEBUG_CONFIG: "client_host=172.17.0.1" # Non-Mac users.
       # XDEBUG_CONFIG: "client_host=host.docker.internal" # Mac users.
       XDEBUG_MODE: "develop, debug"
