EWPP-1910: Run grumphp inside container.

--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -1,2 +1,5 @@
 imports:
   - { resource: vendor/openeuropa/code-review/dist/library-conventions.yml }
+grumphp:
+  git_hook_variables:
+    EXEC_GRUMPHP_COMMAND: 'docker-compose exec -T web'
