EWPP-1910: Update dependencies for PHP8.

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         "willdurand/geocoder": "^4.0"
     },
     "require-dev": {
-        "geocoder-php/provider-integration-tests": "~1.4.0",
+        "geocoder-php/provider-integration-tests": "~1.5.0",
         "openeuropa/code-review": "^2.0",
-        "php-http/curl-client": "^1.7",
+        "php-http/curl-client": "^2.2",
         "phpunit/phpunit": "^7.5.15|~8|~9"
     },
     "provide": {
@@ -25,5 +25,12 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "cweagans/composer-patches": true,
+            "phpro/grumphp": true
+        }
+    }
 }
