--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,7 @@ services:
     image: registry.fpfis.eu/fpfis/httpd-php:${PHP_VERSION}-ci
     environment:
       - DOCUMENT_ROOT=/test/webtools-geocoding-provider
+      - COMPOSERVER=--2
 
 pipeline:
   composer-install-lowest:
