--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
         "willdurand/geocoder": "^4.0"
     },
     "require-dev": {
-        "geocoder-php/provider-integration-tests": "~1.5.0",
+        "geocoder-php/provider-integration-tests": "^1.5",
         "openeuropa/code-review": "^2.0",
         "php-http/curl-client": "^2.2",
-        "phpunit/phpunit": "^7.5.15|~8|~9"
+        "phpunit/phpunit": "^7.5.15|~8|~9",
+        "geocoder-php/google-maps-provider": "^4.7"
     },
     "provide": {
         "geocoder-php/provider-implementation": "1.0"
