--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": ">=8.3",
         "geocoder-php/common-http": "^4.3",
         "willdurand/geocoder": "^4.0",
-        "symfony/http-client": "^7.3"
+        "symfony/http-client": "^6 || ^7.3"
     },
     "require-dev": {
         "geocoder-php/provider-integration-tests": "^1.5.0",
